--- a/src/ui/TracNghiemRabbitMQ.FE/src/app/layouts/default/default.component.html
+++ b/src/ui/TracNghiemRabbitMQ.FE/src/app/layouts/default/default.component.html
@@ -1,15 +1,14 @@
-<header id="header" class="transparent-nav" style="background-color: #2c2f30;">
+<header id="header" class="transparent-nav" style="background-color: #997461;">
   <div class="container" style="height: 100%;">
 
     <div class="navbar-header">
-      <div class="">
-        <!-- Logo -->
+      <!-- <div class="">
         <div class="navbar-brand">
           <a class="logo" href="#">
             <img src="../../assets/img/logo-small.png" alt="logo">
           </a>
         </div>
-      </div>
+      </div> -->
 
       <!-- Navigation -->
       <nav id="nav">
