--- a/src/ui/TracNghiemRabbitMQ.FE/src/app/pages/do-test/do-test.component.html
+++ b/src/ui/TracNghiemRabbitMQ.FE/src/app/pages/do-test/do-test.component.html
@@ -28,7 +28,7 @@
   </div>
 </div>
 <div>
-  <button class="submitTest" (click)="submitData()">Submit</button>
+  <button class="submitTest btn btn-success" (click)="submitData()">Submit</button>
 </div>
 <div>
   <app-count-down [time]="testTime"></app-count-down>
